--- a/configs.json
+++ b/configs.json
@@ -1,5 +1,6 @@
 {
-    "images": [
+    "images": {
+        "tentacle":
         {
             "centre": [
                 -0.7453,
@@ -7,6 +8,7 @@
             ],
             "zoom": 10000
         },
+        "doubletentacle":
         {
             "centre": [
                 -0.745428,
@@ -14,6 +16,7 @@
             ],
             "zoom": 400000.0
         },
+        "splotches":
         {
             "centre": [
                 -0.74529,
@@ -21,55 +24,7 @@
             ],
             "zoom": 80000.0
         },
-        {
-            "centre": [
-                -0.745428,
-                0.113009
-            ],
-            "zoom": 400000.0
-        },
-        {
-            "centre": [
-                -0.16,
-                1.0405
-            ],
-            "zoom": 10000.0
-        },
-        {
-            "centre": [
-                -0.16,
-                1.0405
-            ],
-            "zoom": 10000.0
-        },
-        {
-            "centre": [
-                -0.16,
-                1.0405
-            ],
-            "zoom": 5000.0
-        },
-        {
-            "centre": [
-                -0.16,
-                1.0405
-            ],
-            "zoom": 2500.0
-        },
-        {
-            "centre": [
-                -0.16,
-                1.0405
-            ],
-            "zoom": 1250.0
-        },
-        {
-            "centre": [
-                -0.16,
-                1.0405
-            ],
-            "zoom": 500.0
-        },
+        "tilt":
         {
             "centre": [
                 -0.16,
@@ -77,16 +32,11 @@
             ],
             "zoom": 900.0
         }
-    ],
-    "palletes": [
-        {
+    },
+    "palletes": {
+        "warm": {
             "vals": [
-                0.25,
-                0.3,
-                0.6,
-                0.7,
-                0.9,
-                1
+                0.05, 0.1, 0.3, 0.6, 0.9, 1
             ],
             "colours": [
                 [
@@ -120,6 +70,40 @@
                     25
                 ]
             ]
+        },
+        "pink": {
+            "vals": [
+                0.05, 0.1, 0.5, 0.6, 0.7, 0.9, 1
+            ],
+            "colours": [
+                [18, 44, 52],
+                [18, 44, 52],
+                [161, 204, 165],
+                [242, 186, 201],
+                [179, 63, 98],
+                [177, 15, 46],
+                [
+                    0,
+                    18,
+                    25
+                ]
+            ]
+        },
+        "neon": {
+            "vals": [
+                0, 0.1, 0.4, 0.6, 0.7, 0.8, 0.85, 1
+            ],
+            "colours": [
+                [58, 12, 163],
+                [58, 12, 163],
+                [67, 97, 238],
+                [76, 201, 240],
+                [247, 37, 133],
+                [58, 12, 163],
+                [247, 37, 133],
+                [0, 18, 25]
+            ]
         }
-    ]
+    }
+
 }
