--- a/configs.json
+++ b/configs.json
@@ -1,109 +1,1 @@
-{
-    "images": {
-        "tentacle":
-        {
-            "centre": [
-                -0.7453,
-                0.1127
-            ],
-            "zoom": 10000
-        },
-        "doubletentacle":
-        {
-            "centre": [
-                -0.745428,
-                0.113009
-            ],
-            "zoom": 400000.0
-        },
-        "splotches":
-        {
-            "centre": [
-                -0.74529,
-                0.113075
-            ],
-            "zoom": 80000.0
-        },
-        "tilt":
-        {
-            "centre": [
-                -0.16,
-                1.035
-            ],
-            "zoom": 900.0
-        }
-    },
-    "palletes": {
-        "warm": {
-            "vals": [
-                0.05, 0.1, 0.3, 0.6, 0.9, 1
-            ],
-            "colours": [
-                [
-                    0,
-                    18,
-                    25
-                ],
-                [
-                    0,
-                    18,
-                    25
-                ],
-                [
-                    10,
-                    147,
-                    150
-                ],
-                [
-                    233,
-                    216,
-                    166
-                ],
-                [
-                    174,
-                    32,
-                    18
-                ],
-                [
-                    0,
-                    18,
-                    25
-                ]
-            ]
-        },
-        "pink": {
-            "vals": [
-                0.05, 0.1, 0.5, 0.6, 0.7, 0.9, 1
-            ],
-            "colours": [
-                [18, 44, 52],
-                [18, 44, 52],
-                [161, 204, 165],
-                [242, 186, 201],
-                [179, 63, 98],
-                [177, 15, 46],
-                [
-                    0,
-                    18,
-                    25
-                ]
-            ]
-        },
-        "neon": {
-            "vals": [
-                0, 0.1, 0.4, 0.6, 0.7, 0.8, 0.85, 1
-            ],
-            "colours": [
-                [58, 12, 163],
-                [58, 12, 163],
-                [67, 97, 238],
-                [76, 201, 240],
-                [247, 37, 133],
-                [58, 12, 163],
-                [247, 37, 133],
-                [0, 18, 25]
-            ]
-        }
-    }
-
-}
+{"images": {"tentacle": {"centre": [-0.7453, 0.1127], "zoom": 10000}, "doubletentacle": {"centre": [-0.745428, 0.113009], "zoom": 400000.0}, "splotches": {"centre": [-0.74529, 0.113075], "zoom": 80000.0}, "tilt": {"centre": [-0.16, 1.035], "zoom": 900.0}, "tilt-zoom-out": {"centre": [-0.16, 1.035], "zoom": 700.0}, "tendril": {"centre": [-0.235125, 0.827215], "zoom": 260000.0}, "void": {"centre": [-1.25066, 0.02012], "zoom": 200000.0}, "knife": {"centre": [-1.25066, 0.02012], "zoom": 75000.0}, "divergence": {"centre": [0.2549870375144766, -0.0005679790528465], "zoom": 200000.0}, "spiral": {"centre": [0.2549870375144766, -0.0005679790528465], "zoom": 2250000.0}, "capillary": {"centre": [-0.0452407411, 0.9868162204352258], "zoom": 51200000.0}}, "palletes": {"warm": {"vals": [0.05, 0.1, 0.3, 0.6, 0.9, 1], "colours": [[0, 18, 25], [0, 18, 25], [10, 147, 150], [233, 216, 166], [174, 32, 18], [0, 18, 25]]}, "pink": {"vals": [0.05, 0.1, 0.5, 0.6, 0.7, 0.9, 1], "colours": [[18, 44, 52], [18, 44, 52], [161, 204, 165], [242, 186, 201], [179, 63, 98], [177, 15, 46], [0, 18, 25]]}, "neon": {"vals": [0, 0.1, 0.4, 0.6, 0.7, 0.8, 0.85, 1], "colours": [[58, 12, 163], [58, 12, 163], [67, 97, 238], [76, 201, 240], [247, 37, 133], [58, 12, 163], [247, 37, 133], [0, 18, 25]]}, "dark": {"vals": [0, 0.1, 0.4, 0.6, 0.7, 0.8, 0.85, 0.9, 1], "colours": [[33, 47, 69], [33, 47, 69], [67, 170, 139], [11, 82, 91], [0, 100, 102], [76, 201, 240], [0, 100, 102], [76, 201, 240], [0, 18, 25]]}}}
