--- a/configs.json
+++ b/configs.json
@@ -77,14 +77,14 @@
             ],
             "zoom": 51200000.0
         },
-        "idk": {
+        "chlorophyll": {
             "centre": [
                 0.281717921930775,
                 0.5771052841488505
             ],
             "zoom": 25600000000.0
         },
-        "idk2": {
+        "chloro-zoom": {
             "centre": [
                 0.281717921930775,
                 0.5771052841488505
@@ -143,7 +143,7 @@
                 0.6,
                 0.7,
                 0.8,
-                0.85,
+                0.95,
                 1
             ],
             "colours": [
