add more examples

--- a/configs.json
+++ b/configs.json
@@ -1,275 +1,1 @@
-{
-    "images": {
-        "tentacle": {
-            "centre": [
-                -0.7453,
-                0.1127
-            ],
-            "zoom": 10000
-        },
-        "doubletentacle": {
-            "centre": [
-                -0.745428,
-                0.113009
-            ],
-            "zoom": 400000.0
-        },
-        "splotches": {
-            "centre": [
-                -0.74529,
-                0.113075
-            ],
-            "zoom": 80000.0
-        },
-        "tilt": {
-            "centre": [
-                -0.16,
-                1.035
-            ],
-            "zoom": 900.0
-        },
-        "tilt-zoom-out": {
-            "centre": [
-                -0.16,
-                1.035
-            ],
-            "zoom": 700.0
-        },
-        "tendril": {
-            "centre": [
-                -0.235125,
-                0.827215
-            ],
-            "zoom": 260000.0
-        },
-        "void": {
-            "centre": [
-                -1.25066,
-                0.02012
-            ],
-            "zoom": 200000.0
-        },
-        "knife": {
-            "centre": [
-                -1.25066,
-                0.02012
-            ],
-            "zoom": 75000.0
-        },
-        "divergence": {
-            "centre": [
-                0.2549870375144766,
-                -0.0005679790528465
-            ],
-            "zoom": 200000.0
-        },
-        "spiral": {
-            "centre": [
-                0.2549870375144766,
-                -0.0005679790528465
-            ],
-            "zoom": 2250000.0
-        },
-        "capillary": {
-            "centre": [
-                -0.0452407411,
-                0.9868162204352258
-            ],
-            "zoom": 51200000.0
-        },
-        "chlorophyll": {
-            "centre": [
-                0.281717921930775,
-                0.5771052841488505
-            ],
-            "zoom": 25600000000.0
-        },
-        "chloro-zoom": {
-            "centre": [
-                0.281717921930775,
-                0.5771052841488505
-            ],
-            "zoom": 102400000000.0
-        }
-    },
-    "palletes": {
-        "warm": {
-            "vals": [
-                0.05,
-                0.1,
-                0.3,
-                0.6,
-                0.9,
-                1
-            ],
-            "colours": [
-                [
-                    0,
-                    18,
-                    25
-                ],
-                [
-                    0,
-                    18,
-                    25
-                ],
-                [
-                    10,
-                    147,
-                    150
-                ],
-                [
-                    233,
-                    216,
-                    166
-                ],
-                [
-                    174,
-                    32,
-                    18
-                ],
-                [
-                    0,
-                    18,
-                    25
-                ]
-            ]
-        },
-        "neon": {
-            "vals": [
-                0,
-                0.1,
-                0.4,
-                0.6,
-                0.7,
-                0.8,
-                0.95,
-                1
-            ],
-            "colours": [
-                [
-                    58,
-                    12,
-                    163
-                ],
-                [
-                    58,
-                    12,
-                    163
-                ],
-                [
-                    67,
-                    97,
-                    238
-                ],
-                [
-                    76,
-                    201,
-                    240
-                ],
-                [
-                    247,
-                    37,
-                    133
-                ],
-                [
-                    58,
-                    12,
-                    163
-                ],
-                [
-                    247,
-                    37,
-                    133
-                ],
-                [
-                    0,0,0
-                ]
-            ]
-        },
-        "dark": {
-            "vals": [
-                0,
-                0.1,
-                0.4,
-                0.6,
-                0.7,
-                0.8,
-                0.85,
-                0.9,
-                1
-            ],
-            "colours": [
-                [
-                    33,
-                    47,
-                    69
-                ],
-                [
-                    33,
-                    47,
-                    69
-                ],
-                [
-                    67,
-                    170,
-                    139
-                ],
-                [
-                    11,
-                    82,
-                    91
-                ],
-                [
-                    0,
-                    100,
-                    102
-                ],
-                [
-                    76,
-                    201,
-                    240
-                ],
-                [
-                    0,
-                    100,
-                    102
-                ],
-                [
-                    76,
-                    201,
-                    240
-                ],
-                [
-                    0,
-                    0,
-                    0
-                ]
-            ]
-        },
-        "electric": {
-            "vals": [0, 0.1, 0.5, 0.8, 0.9, 0.95, 1],
-            "colours": [
-                [0, 18, 25],
-                [0, 18, 25],
-                [20, 33, 61],
-                [252, 163, 17],
-                [229, 229, 229],
-                [255, 255, 255],
-                [0, 0, 0]
-            ]
-        },
-        "pastel": {
-            "vals": [0, 0.1, 0.3, 0.5, 0.7, 0.9, 1],
-            "colours":[
-                [0, 18, 25],
-                [0, 18, 25],
-                [61, 64, 91],
-                [129, 178, 154],
-                [242, 204, 143],
-                [224, 122, 95],
-                [0, 0, 0]
-            ]
-        }
-    }
-}
+{"images": {"tentacle": {"centre": [-0.7453, 0.1127], "zoom": 10000}, "doubletentacle": {"centre": [-0.745428, 0.113009], "zoom": 400000.0}, "splotches": {"centre": [-0.74529, 0.113075], "zoom": 80000.0}, "tilt": {"centre": [-0.16, 1.035], "zoom": 900.0}, "tilt-zoom-out": {"centre": [-0.16, 1.035], "zoom": 700.0}, "tendril": {"centre": [-0.235125, 0.827215], "zoom": 260000.0}, "void": {"centre": [-1.25066, 0.02012], "zoom": 200000.0}, "knife": {"centre": [-1.25066, 0.02012], "zoom": 75000.0}, "divergence": {"centre": [0.2549870375144766, -0.0005679790528465], "zoom": 200000.0}, "spiral": {"centre": [0.2549870375144766, -0.0005679790528465], "zoom": 2250000.0}, "capillary": {"centre": [-0.0452407411, 0.9868162204352258], "zoom": 51200000.0}, "chlorophyll": {"centre": [0.281717921930775, 0.5771052841488505], "zoom": 25600000000.0}, "chloro-zoom": {"centre": [0.281717921930775, 0.5771052841488505], "zoom": 102400000000.0}, "circle": {"centre": [0.432539867562512, 0.226118675951765], "zoom": 25000000000000.0}}, "palletes": {"warm": {"vals": [0.05, 0.1, 0.3, 0.6, 0.9, 1], "colours": [[0, 18, 25], [0, 18, 25], [10, 147, 150], [233, 216, 166], [174, 32, 18], [0, 18, 25]]}, "neon": {"vals": [0, 0.1, 0.4, 0.6, 0.7, 0.8, 0.95, 1], "colours": [[58, 12, 163], [58, 12, 163], [67, 97, 238], [76, 201, 240], [247, 37, 133], [58, 12, 163], [247, 37, 133], [0, 0, 0]]}, "dark": {"vals": [0, 0.1, 0.4, 0.6, 0.7, 0.8, 0.85, 0.9, 1], "colours": [[33, 47, 69], [33, 47, 69], [67, 170, 139], [11, 82, 91], [0, 100, 102], [76, 201, 240], [0, 100, 102], [76, 201, 240], [0, 0, 0]]}, "electric": {"vals": [0, 0.1, 0.5, 0.8, 0.9, 0.95, 1], "colours": [[0, 18, 25], [0, 18, 25], [20, 33, 61], [252, 163, 17], [229, 229, 229], [255, 255, 255], [0, 0, 0]]}, "pastel": {"vals": [0, 0.1, 0.3, 0.5, 0.7, 0.9, 1], "colours": [[0, 18, 25], [0, 18, 25], [61, 64, 91], [129, 178, 154], [242, 204, 143], [224, 122, 95], [0, 0, 0]]}}}
