--- a/configs.json
+++ b/configs.json
@@ -103,74 +103,48 @@
         "dark": {
             "colours": [
                 [
-                    33,
-                    47,
-                    69
-                ],
-                [
-                    33,
-                    47,
-                    69
-                ],
-                [
                     67,
                     170,
                     139
                 ],
                 [
-                    11,
-                    82,
-                    91
-                ],
-                [
-                    0,
-                    100,
-                    102
-                ],
-                [
-                    76,
-                    201,
-                    240
-                ],
-                [
-                    0,
-                    100,
-                    102
-                ],
-                [
-                    76,
-                    201,
-                    240
+                    33,
+                    47,
+                    69
                 ],
                 [
                     0,
                     0,
                     0
+                ],
+                [
+                    0,
+                    100,
+                    102
+                ],
+                [
+                    76,
+                    201,
+                    240
+                ],
+                [
+                    11,
+                    82,
+                    91
                 ]
-            ],
-            "vals": [
-                0,
-                0.1,
-                0.4,
-                0.6,
-                0.7,
-                0.8,
-                0.85,
-                0.9,
-                1
             ]
         },
         "electric": {
             "colours": [
                 [
-                    0,
-                    18,
-                    25
+                    229,
+                    229,
+                    229
                 ],
                 [
                     0,
-                    18,
-                    25
+                    0,
+                    0
                 ],
                 [
                     20,
@@ -178,14 +152,9 @@
                     61
                 ],
                 [
-                    252,
-                    163,
-                    17
-                ],
-                [
-                    229,
-                    229,
-                    229
+                    0,
+                    18,
+                    25
                 ],
                 [
                     255,
@@ -193,32 +162,18 @@
                     255
                 ],
                 [
-                    0,
-                    0,
-                    0
+                    252,
+                    163,
+                    17
                 ]
-            ],
-            "vals": [
-                0,
-                0.1,
-                0.5,
-                0.8,
-                0.9,
-                0.95,
-                1
             ]
         },
         "neon": {
             "colours": [
                 [
-                    58,
-                    12,
-                    163
-                ],
-                [
-                    58,
-                    12,
-                    163
+                    0,
+                    0,
+                    0
                 ],
                 [
                     67,
@@ -239,45 +194,30 @@
                     58,
                     12,
                     163
-                ],
-                [
-                    247,
-                    37,
-                    133
-                ],
-                [
-                    0,
-                    0,
-                    0
                 ]
-            ],
-            "vals": [
-                0,
-                0.1,
-                0.4,
-                0.6,
-                0.7,
-                0.8,
-                0.95,
-                1
             ]
         },
         "pastel": {
             "colours": [
                 [
                     0,
-                    18,
-                    25
-                ],
-                [
                     0,
-                    18,
-                    25
+                    0
                 ],
                 [
                     61,
                     64,
                     91
+                ],
+                [
+                    224,
+                    122,
+                    95
+                ],
+                [
+                    0,
+                    18,
+                    25
                 ],
                 [
                     129,
@@ -288,49 +228,20 @@
                     242,
                     204,
                     143
-                ],
-                [
-                    224,
-                    122,
-                    95
-                ],
-                [
-                    0,
-                    0,
-                    0
                 ]
-            ],
-            "vals": [
-                0,
-                0.1,
-                0.3,
-                0.5,
-                0.7,
-                0.9,
-                1
             ]
         },
         "warm": {
             "colours": [
-                [
-                    0,
-                    18,
-                    25
-                ],
-                [
-                    0,
-                    18,
-                    25
-                ],
                 [
                     10,
                     147,
                     150
                 ],
                 [
-                    233,
-                    216,
-                    166
+                    0,
+                    18,
+                    25
                 ],
                 [
                     174,
@@ -338,18 +249,29 @@
                     18
                 ],
                 [
-                    0,
-                    18,
-                    25
+                    233,
+                    216,
+                    166
                 ]
-            ],
-            "vals": [
-                0.05,
-                0.1,
-                0.3,
-                0.6,
-                0.9,
-                1
+            ]
+        },
+        "tokyo-night": {
+            "colours": [
+                [0,255,210],
+                [255,68,153],
+                [0,0,0],
+                [10,0,71],
+                [0,70,135]
+            ]
+        },
+        "dracula": {
+            "colours": [
+                [248, 248, 242],
+                [40, 42, 54],
+                [98, 114, 164],
+                [80, 250, 123],
+                [189, 147, 249],
+                [255, 85, 85]   
             ]
         }
     }
