--- a/configs.json
+++ b/configs.json
@@ -99,7 +99,7 @@
             "zoom": 200000.0
         }
     },
-    "palletes": {
+    "palettes": {
         "dark": {
             "colours": [
                 [
@@ -253,25 +253,6 @@
                     216,
                     166
                 ]
-            ]
-        },
-        "tokyo-night": {
-            "colours": [
-                [0,255,210],
-                [255,68,153],
-                [0,0,0],
-                [10,0,71],
-                [0,70,135]
-            ]
-        },
-        "dracula": {
-            "colours": [
-                [248, 248, 242],
-                [40, 42, 54],
-                [98, 114, 164],
-                [80, 250, 123],
-                [189, 147, 249],
-                [255, 85, 85]   
             ]
         }
     }
